@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Simplify door-opening with keys for player, bypassing hit_player().
+This should partly fix bug #1811331: discrete damage bug.
+Nicolas Weeger 2010-09-26
+
 Fix bug #2072850: Inconsistent limits for damage stat.
 Nicolas Weeger 2010-09-26
 
